// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenshotView render matches snapshot when deviceName is unavailable 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <Screenshot
    altText="axe-android results screenshot with highlighted components"
    encodedImage="testScreenshotData"
  />
</div>
`;

exports[`ScreenshotView render matches snapshot when passed a screenshot with no highlights 1`] = `
<div>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <Screenshot
    altText="axe-android results screenshot with highlighted components"
    encodedImage="testScreenshotData"
  />
  <caption>
    My Cool Android Device
  </caption>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData {} 1`] = `
<div>
  Screenshot for scan is unavailable
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData null 1`] = `
<div>
  Screenshot for scan is unavailable
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData undefined 1`] = `
<div>
  Screenshot for scan is unavailable
</div>
`;
